root/cilium-resources.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium
  namespace: kube-system
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      port: 8080
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      port: 8443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: cilium-gateway-tls
            namespace: kube-system
      allowedRoutes:
        namespaces:
          from: All

---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cilium
  namespace: kube-system
spec:
  controllerName: io.cilium/gateway-controller

---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: ccwnp-allow-dns-cluster
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - cluster
        - remote-node
        - host
        - kube-apiserver
        - world
  ingress:
    - fromEntities:
        - cluster
        - remote-node
        - host
        - ingress
    - fromCIDR:
        - 10.250.0.0/16

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-allow-node-ingress
  namespace: kube-system
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - remote-node
        - host
        - cluster
        - ingress
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
    - fromCIDR:
        - 10.250.0.0/16
  egress:
    - toEntities:
        - remote-node
        - host
        - kube-apiserver
    - toCIDR:
        - 10.249.0.0/16
        - 10.248.0.0/16
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-hubble-ui
  namespace: kube-system
spec:
  parentRefs:
    - name: cilium
      namespace: kube-system
  hostnames:
    - hubble.localhost
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hubble-ui
          port: 80
